[package]
name = "autd3-capi-link-ethercrab"
version = "38.0.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/shinolab/autd3-capi-link-ethercrab"

[lib]
crate-type = ["cdylib"]

[features]
unity = ["autd3capi-driver/unity"]

[dependencies]
autd3capi-driver = { git = "https://github.com/shinolab/autd3-capi.git", version = "38.0.1", default-features = false }
autd3-link-ethercrab = { version = "38.0.1", features = ["tokio"], default-features = false }

[profile.release]
strip = true
lto = false
rpath = true
