[package]
name = "license-checker"
version = "37.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.72"
cargo-license = "0.7.0"
cargo_metadata = "0.21.0"
# glob = "0.3.1"
# reqwest = { version = "0.12.8", features = ["blocking"] }
# serde = { version = "1.0.175", features = ["derive"] }
# serde_json = "1.0.104"
# similar = { version = "2.2.1", features = ["text", "inline", "bytes"] }
# toml = "0.8.2"
